--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2024_Homework1': ['specimenP1Q1', 'specimenP1Q2', 'specimenP1Q6', 'specimenP1Q9', 'specimenP1Q13', 'specimenP1Q14', 'specimenP1Q16', '2016P1Q4', '2016P1Q8', '2016P1Q17'], '2024_Lesson1': ['2016P1Q2', 'specimenP1Q4', 'specimenP1Q17', 'specimenP1Q11', 'specimenP1Q19', '2016P1Q14', 'specimenP1Q5', 'specimenP1Q8', 'specimenP1Q18']}\n"
+      "{'2024_Homework1': ['specimenP1Q1', 'specimenP1Q2', 'specimenP1Q6', 'specimenP1Q9', 'specimenP1Q13', 'specimenP1Q14', 'specimenP1Q16', '2016P1Q4', '2016P1Q8', '2016P1Q17'], '2024_Homework2': ['2016P1Q1', '2016P1Q19', '2016P1Q5', '2016P1Q15', '2016P1Q18', 'specimenP1Q3', 'specimenP1Q10', 'specimenP1Q12', '2016P1Q12', '2016P1Q20'], '2024_Homework3': ['2016P2Q19', '2016P2Q20', '2018P2Q8', '2016P2Q9', '2016P2Q15', '2018P2Q11', '2018P2Q17', 'specimenP2Q8', '2016P2Q4', 'specimenP2Q20'], '2024_Lesson2': ['2016P1Q2', 'specimenP1Q4', 'specimenP1Q17', 'specimenP1Q11', 'specimenP1Q19', '2016P1Q14', 'specimenP1Q5', 'specimenP1Q8', 'specimenP1Q18'], '2024_Lesson3&4': ['specimenP1Q20', '2016P1Q9', 'specimenP1Q15', '2016P1Q3']}\n"
      ]
     }
    ],
@@ -28,22 +28,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DDDACDEBFD\n"
+      "FEDDDACCCD\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['TMUA_Questions/specimenP1/1.png',\n",
-       " 'TMUA_Questions/specimenP1/2.png',\n",
-       " 'TMUA_Questions/specimenP1/6.png',\n",
-       " 'TMUA_Questions/specimenP1/9.png',\n",
-       " 'TMUA_Questions/specimenP1/13.png',\n",
-       " 'TMUA_Questions/specimenP1/14.png',\n",
-       " 'TMUA_Questions/specimenP1/16.png',\n",
-       " 'TMUA_Questions/2016P1/4.png',\n",
-       " 'TMUA_Questions/2016P1/8.png',\n",
-       " 'TMUA_Questions/2016P1/17.png']"
+       "['TMUA_Questions/2016P2/19.png',\n",
+       " 'TMUA_Questions/2016P2/20.png',\n",
+       " 'TMUA_Questions/2018P2/8.png',\n",
+       " 'TMUA_Questions/2016P2/9.png',\n",
+       " 'TMUA_Questions/2016P2/15.png',\n",
+       " 'TMUA_Questions/2018P2/11.png',\n",
+       " 'TMUA_Questions/2018P2/17.png',\n",
+       " 'TMUA_Questions/specimenP2/8.png',\n",
+       " 'TMUA_Questions/2016P2/4.png',\n",
+       " 'TMUA_Questions/specimenP2/20.png']"
       ]
      },
      "execution_count": 2,
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "FILE = \"2024_Homework1\"\n",
+    "FILE = \"2024_Homework3\"\n",
     "\n",
     "keys = lists[FILE]\n",
     "images_paths = []\n",
@@ -134,16 +134,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10048\\40516949.py:2: DeprecationWarning: \"uni\" parameter is deprecated since v2.5.1, unused and will soon be removed\n",
-      "  solution_pdf.add_font('FONT', '', r'C:\\Users\\user\\AppData\\Local\\Microsoft\\Windows\\Fonts\\STZHONGS.TTF', uni=True)\n"
+      "c:\\Program Files\\Python312\\Lib\\site-packages\\fpdf\\ttfonts.py:670: UserWarning: cmap value too big/small: -34890\n",
+      "  warnings.warn(\"cmap value too big/small: %s\" % cm)\n",
+      "c:\\Program Files\\Python312\\Lib\\site-packages\\fpdf\\ttfonts.py:670: UserWarning: cmap value too big/small: -35152\n",
+      "  warnings.warn(\"cmap value too big/small: %s\" % cm)\n",
+      "c:\\Program Files\\Python312\\Lib\\site-packages\\fpdf\\ttfonts.py:670: UserWarning: cmap value too big/small: -35709\n",
+      "  warnings.warn(\"cmap value too big/small: %s\" % cm)\n",
+      "c:\\Program Files\\Python312\\Lib\\site-packages\\fpdf\\ttfonts.py:670: UserWarning: cmap value too big/small: -35792\n",
+      "  warnings.warn(\"cmap value too big/small: %s\" % cm)\n",
+      "c:\\Program Files\\Python312\\Lib\\site-packages\\fpdf\\ttfonts.py:670: UserWarning: cmap value too big/small: -65263\n",
+      "  warnings.warn(\"cmap value too big/small: %s\" % cm)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "solution_pdf = PDF()\n",
     "solution_pdf.add_font('FONT', '', r'C:\\Users\\user\\AppData\\Local\\Microsoft\\Windows\\Fonts\\STZHONGS.TTF', uni=True)\n",
     "solution_pdf.set_font('FONT', '', 14)\n",
-    "title = \"TMUA Homework 1\"\n",
+    "title = \"TMUA Homework 3\"\n",
     "subtitle1 = \"10 Questions\"\n",
     "subtitle2 = \"40 Minutes\"\n",
     "subtitle3 = \"请计时并不要使用计算器，完成后请填写线上表格提交作业\"\n",
@@ -156,23 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10048\\230271329.py:2: DeprecationWarning: \"uni\" parameter is deprecated since v2.5.1, unused and will soon be removed\n",
-      "  solution_pdf.add_font('FONT', '', r'C:\\Users\\user\\AppData\\Local\\Microsoft\\Windows\\Fonts\\STZHONGS.TTF', uni=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solution_pdf = PDF()\n",
     "solution_pdf.add_font('FONT', '', r'C:\\Users\\user\\AppData\\Local\\Microsoft\\Windows\\Fonts\\STZHONGS.TTF', uni=True)\n",
     "solution_pdf.set_font('FONT', '', 14)\n",
-    "title = \"TMUA Homework 1 Solutions\"\n",
+    "title = \"TMUA Homework 3 Solutions\"\n",
     "subtitle1 = \"10 Questions\"\n",
     "subtitle2 = \"40 Minutes\"\n",
     "subtitle3 = f\"Answers: {''.join(answers)}\"\n",
